forcing the use of (at least) javac 1.5, to enable the use of annotations, generics and so on (not supported by older java compilers)
git-svn-id: file:///home/apertium/svn-mirror/apertium-sf-net/trunk/lttoolbox-java@19886 2c8c2297-680c-4500-a755-649f80e260dd

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>lttoolbox-java</groupId>
 	<artifactId>lttoolbox-java</artifactId>
-	
+
 	<name>lttoolbox-java</name>
 	<version>0.0.1-SNAPSHOT</version>
 	<description>lttoolbox-java is able to process and generate the binary files used by lttoolbox and produce exactly the same output.</description>
@@ -34,6 +34,17 @@
 				<directory>testdata</directory>
 			</testResource>
 		</testResources>
+
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.5</source>
+					<target>1.5</target>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 
 </project>
