--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>lttoolbox-java</artifactId>
 
 	<name>lttoolbox-java</name>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>3.2.0-SNAPSHOT</version>
 	<description>lttoolbox-java is able to process and generate the binary files used by lttoolbox and produce exactly the same output.</description>
 	<url>http://wiki.apertium.org/wiki/Lttoolbox-java</url>
 
@@ -13,6 +13,41 @@
 		<name>The Apertium Project</name>
 		<url>http://www.apertium.org</url>
 	</organization>
+
+	<issueManagement>
+		<system>Apertium Bug Tracker</system>
+		<url>http://wiki.apertium.org/wiki/Bugzilla</url>
+	</issueManagement>
+
+	<developers>
+		<developer>
+			<id>jacobEo</id>
+			<name>Jacob Nordfalk</name>
+			<email>jacob.nordfalk@gmail.com</email>
+			<timezone>1</timezone>
+			<roles>
+				<role>developer</role>
+			</roles>
+		</developer>
+	</developers>
+
+	<licenses>
+		<license>
+			<name>Common Public License - v 1.0</name>
+			<url>http://www-128.ibm.com/developerworks/library/os-cpl.html</url>
+			<distribution>repo</distribution>
+		</license>
+		<license>
+			<name>GNU General Public License Version 2</name>
+			<url>http://www.gnu.org/copyleft/gpl.html</url>
+			<distribution>repo</distribution>
+		</license>
+		<license>
+			<name>GNU Lesser General Public License Version 2.1</name>
+			<url>http://www.gnu.org/licenses/lgpl.html</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
 	<build>
 		<directory>target</directory>
