--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,7 +27,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
 jar.compress=true
-javac.classpath=
+javac.classpath=\
+    ${libs.javac.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
@@ -48,6 +49,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
 jnlp.codebase.type=local
 jnlp.codebase.url=file:/home/j/esperanto/apertium/lttoolbox-java/dist/
 jnlp.descriptor=application
@@ -60,15 +62,15 @@ meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.javac.classpath}
 # Space-separated list of JVM arguments used when running the project
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
 run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes.dir}:\
-    
+    ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
