--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -59,15 +59,12 @@ jnlp.signed=false
 main.class=org.apertium.lttoolbox.LTToolbox
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-platform.active=default_platform
+platform.active=JDK_1.6
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${libs.javac.classpath}
-# Space-separated list of JVM arguments used when running the project
-# (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
-# or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=
+run.jvmargs=-Xms64m -Xmx800m -Dfile.encoding=UTF-8
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
