Surely non-empty expression are not checked for emptiness
git-svn-id: file:///home/apertium/svn-mirror/apertium-sf-net/trunk/lttoolbox-java@20348 2c8c2297-680c-4500-a755-649f80e260dd

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,8 +28,7 @@ endorsed.classpath=
 excludes=
 includes=**
 jar.compress=true
-javac.classpath=\
-    ${libs.javac.classpath}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
@@ -63,8 +62,7 @@ meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.javac.classpath}
+    ${build.classes.dir}
 run.jvmargs=-Xms64m -Xmx800m -Dfile.encoding=UTF-8
 run.test.classpath=\
     ${javac.test.classpath}:\
