<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
git-svn-id: file:///home/apertium/svn-mirror/apertium-sf-net/trunk/lttoolbox-java@20379 2c8c2297-680c-4500-a755-649f80e260dd

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,10 @@
 		</license>
 	</licenses>
 
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
 	<build>
 		<directory>target</directory>
 		<outputDirectory>target/classes</outputDirectory>
