--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,29 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
+<!--
+	<profiles>
+		<profile>
+			<id>default-tools.jar</id>
+			<activation>
+				<property>
+					<name>java.vendor</name>
+					<value>Sun Microsystems Inc.</value>
+				</property>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>com.sun</groupId>
+					<artifactId>tools</artifactId>
+					<version>1.4.2</version>
+					<scope>system</scope>
+					<systemPath>${java.home}/../lib/tools.jar</systemPath>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
+-->	
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
