manifest.mf misses some informations; i am hardcoding them in pom.xml
git-svn-id: file:///home/apertium/svn-mirror/apertium-sf-net/trunk/lttoolbox-java@20442 2c8c2297-680c-4500-a755-649f80e260dd

--- a/pom.xml
+++ b/pom.xml
@@ -93,10 +93,15 @@
 				<version>2.2</version>
 				<configuration>
 					<archive>
+						<manifest>
+							<mainClass>org.apertium.lttoolbox.LTToolbox</mainClass>
+							<packageName>org.apertium.lttoolbox</packageName>
+						</manifest>
 						<manifestEntries>
 							<mode>development</mode>
 							<url>${pom.url}</url>
 						</manifestEntries>
+						<manifestFile>manifest.mf</manifestFile>
 					</archive>
 				</configuration>
 			</plugin>
