--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@
 				</configuration>
 			</plugin>
 
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-eclipse-plugin</artifactId>
+				<version>2.8</version>
+			</plugin>
+
 		</plugins>
 	</build>
 
