Fix for J2SE Platform is not correctly set up.  Your active platform is: JDK_1.6, but the corresponding property  "platforms.JDK_1.6.home" is not found in the project's properties  files
git-svn-id: file:///home/apertium/svn-mirror/apertium-sf-net/trunk/lttoolbox-java@41236 2c8c2297-680c-4500-a755-649f80e260dd

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 application.desc=
 application.title=lttoolbox
@@ -68,7 +69,7 @@ main.class=org.apertium.lttoolbox.LTToolbox
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.6
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
