--- a/testdata/Automatically_trimming_a_monodix/Makefile
+++ b/testdata/Automatically_trimming_a_monodix/Makefile
@@ -1,8 +1,12 @@
 all:
 	lt-comp lr test-en.dix test-en.bin
+	lt-comp lr correctly-pruned-en.dix correctly-pruned-en.bin
 	lt-comp lr test-en-eu.dix test-en-eu.bin
 	lt-print test-en.bin > test-en.att
+	lt-print correctly-pruned-en.bin > correctly-pruned-en.att
 	lt-print test-en-eu.bin > test-en-eu.att
+
+hfst:
 	hfst-txt2fst -e ε <  test-en.att > test-en.fst
 	hfst-txt2fst -e ε <  test-en-eu.att > test-en-eu.fst
 	hfst-invert test-en.fst -o test-en.mor.fst
