--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,82 +1,72 @@
-annotation.processing.enabled=false
-annotation.processing.enabled.in.editor=false
-annotation.processing.processors.list=
-annotation.processing.run.all.processors=true
-application.desc=
-application.title=lttoolbox
-application.vendor=Apertium
-build.classes.dir=${build.dir}/classes
-build.classes.excludes=**/*.java,**/*.form
-# This directory is removed when the project is cleaned:
-build.dir=build
-build.generated.dir=${build.dir}/generated
-build.generated.sources.dir=${build.dir}/generated-sources
-# Only compile against the classpath explicitly listed here:
-build.sysclasspath=ignore
-build.test.classes.dir=${build.dir}/test/classes
-build.test.results.dir=${build.dir}/test/results
-# Uncomment to specify the preferred debugger connection transport:
-#debug.transport=dt_socket
-debug.classpath=\
-    ${run.classpath}
-debug.test.classpath=\
-    ${run.test.classpath}
-# This directory is removed when the project is cleaned:
-dist.dir=dist
-dist.jar=${dist.dir}/lttoolbox.jar
-dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
+#Fri Jun 02 12:58:01 CEST 2017
 excludes=
-includes=**
-jar.archive.disabled=${jnlp.enabled}
-jar.compress=true
-jar.index=${jnlp.enabled}
-javac.classpath=
-# Space-separated list of extra javac options
-javac.compilerargs=
 javac.deprecation=false
-javac.processorpath=\
-    ${javac.classpath}
-javac.source=1.6
+jnlp.signing.alias=
+jnlp.enabled=false
+build.test.results.dir=${build.dir}/test/results
+run.classpath=${javac.classpath}\:${build.classes.dir}
+javadoc.nonavbar=false
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+javac.processorpath=${javac.classpath}
+jnlp.signed=false
 javac.target=1.6
+jnlp.signing=
+annotation.processing.processors.list=
+javadoc.noindex=false
+javadoc.additionalparam=
+includes=**
+jnlp.mixed.code=default
+build.classes.dir=${build.dir}/classes
+source.encoding=UTF-8
+javadoc.author=false
+test.src.dir=test
+build.dir=build
+jar.index=${jnlp.enabled}
+jnlp.signing.keystore=
+build.test.classes.dir=${build.dir}/test/classes
+platform.active=default_platform
+javac.compilerargs=
+main.class=org.apertium.CommandLineInterface
+jnlp.descriptor=application
+dist.jar=${dist.dir}/lttoolbox.jar
+jnlp.codebase.url=file\:/home/j/esperanto/apertium/lttoolbox-java/dist/
+javadoc.use=true
+build.sysclasspath=ignore
+debug.test.classpath=${run.test.classpath}
+dist.dir=dist
+build.classes.excludes=**/*.java,**/*.form
+javadoc.splitindex=true
+javadoc.encoding=${source.encoding}
+javac.source=1.6
+application.vendor=Apertium
+junit.selected.version=4
+debug.classpath=${run.classpath}
+jar.archive.disabled=${jnlp.enabled}
+run.jvmargs=-Xms64m -Xmx800m -Dfile.encoding\=UTF-8 -client
+jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
+build.generated.dir=${build.dir}/generated
+jar.compress=true
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_4.classpath}
-javadoc.additionalparam=
-javadoc.author=false
-javadoc.encoding=${source.encoding}
-javadoc.noindex=false
-javadoc.nonavbar=false
-javadoc.notree=false
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 javadoc.private=false
-javadoc.splitindex=true
-javadoc.use=true
+annotation.processing.run.all.processors=true
+application.title=lttoolbox
+meta.inf.dir=${src.dir}/META-INF
+manifest.file=manifest.mf
+annotation.processing.enabled=false
+dist.javadoc.dir=${dist.dir}/javadoc
+src.dir=src
+mkdist.disabled=true
+jnlp.offline-allowed=false
+endorsed.classpath=
+javac.classpath=
+annotation.processing.enabled.in.editor=false
+application.desc=
+build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
 javadoc.windowtitle=
-jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
+javadoc.notree=false
 jnlp.codebase.type=local
-jnlp.codebase.url=file:/home/j/esperanto/apertium/lttoolbox-java/dist/
-jnlp.descriptor=application
-jnlp.enabled=false
-jnlp.mixed.code=default
-jnlp.offline-allowed=false
-jnlp.signed=false
-jnlp.signing=
-jnlp.signing.alias=
-jnlp.signing.keystore=
-main.class=org.apertium.CommandLineInterface
-manifest.file=manifest.mf
-meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=true
-platform.active=default_platform
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
-run.jvmargs=-Xms64m -Xmx800m -Dfile.encoding=UTF-8 -client
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-source.encoding=UTF-8
-src.dir=src
-test.src.dir=test
