--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,6 @@
 		<finalName>${project.artifactId}-${project.version}</finalName>
 		<testOutputDirectory>target/test-classes</testOutputDirectory>
 		<sourceDirectory>src</sourceDirectory>
-		<scriptSourceDirectory>src/main/scripts</scriptSourceDirectory>
 		<testSourceDirectory>test</testSourceDirectory>
 
 		<resources>
@@ -75,8 +74,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>8</source>
+					<target>8</target>
 					<encoding>${project.build.sourceEncoding}</encoding>
 				</configuration>
 			</plugin>
@@ -139,6 +138,7 @@
 -->
 
 	<dependencies>
+		<!--
 		<dependency>
 			<groupId>trove4j</groupId>
 			<artifactId>trove4j</artifactId>
@@ -158,6 +158,7 @@
 			<artifactId>commons-primitives</artifactId>
 			<version>1.0</version>
 		</dependency>
+-->
 
 		<dependency>
 			<groupId>junit</groupId>
@@ -167,6 +168,14 @@
 			<scope>test</scope>
 			<optional>true</optional>
 		</dependency>
-	</dependencies>
+
+<!--
+        <dependency>
+            <groupId>org.apache.bcel</groupId>
+            <artifactId>bcel</artifactId>
+            <version>6.4.1</version>
+        </dependency>
+        -->
+    </dependencies>
 
 </project>
