--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,15 +1,44 @@
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
+debug.modulepath=\
+    ${run.modulepath}
+debug.test.modulepath=\
+    ${run.test.modulepath}
 #Fri Jun 02 12:58:01 CEST 2017
 excludes=
 javac.deprecation=false
+javac.external.vm=false
+javac.modulepath=
+javac.processormodulepath=
+javac.source=1.8
+javac.target=1.8
+javac.test.modulepath=\
+    ${javac.modulepath}
+javadoc.html5=false
+jlink.launcher=false
+jlink.launcher.name=lttoolbox
 jnlp.signing.alias=
 jnlp.enabled=false
 build.test.results.dir=${build.dir}/test/results
-run.classpath=${javac.classpath}\:${build.classes.dir}
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
 javadoc.nonavbar=false
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
-javac.processorpath=${javac.classpath}
+run.modulepath=\
+    ${javac.modulepath}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
+javac.processorpath=\
+    ${javac.classpath}
 jnlp.signed=false
-javac.target=1.6
 jnlp.signing=
 annotation.processing.processors.list=
 javadoc.noindex=false
@@ -17,6 +46,8 @@ javadoc.additionalparam=
 includes=**
 jnlp.mixed.code=default
 build.classes.dir=${build.dir}/classes
+run.test.modulepath=\
+    ${javac.test.modulepath}
 source.encoding=UTF-8
 javadoc.author=false
 test.src.dir=test
@@ -24,7 +55,7 @@ build.dir=build
 jar.index=${jnlp.enabled}
 jnlp.signing.keystore=
 build.test.classes.dir=${build.dir}/test/classes
-platform.active=default_platform
+platform.active=JDK_1.8
 javac.compilerargs=
 main.class=org.apertium.CommandLineInterface
 jnlp.descriptor=application
@@ -37,7 +68,6 @@ dist.dir=dist
 build.classes.excludes=**/*.java,**/*.form
 javadoc.splitindex=true
 javadoc.encoding=${source.encoding}
-javac.source=1.6
 application.vendor=Apertium
 junit.selected.version=4
 debug.classpath=${run.classpath}
