--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>lttoolbox-java</artifactId>
 
 	<name>lttoolbox-java</name>
-	<version>3.2.0-SNAPSHOT</version>
+	<version>3.4.0</version>
 	<description>lttoolbox-java is able to process and generate the binary files used by lttoolbox and produce exactly the same output.</description>
 	<url>http://wiki.apertium.org/wiki/Lttoolbox-java</url>
 
