--- a/pom.xml
+++ b/pom.xml
@@ -5,18 +5,18 @@
 	<artifactId>lttoolbox-java</artifactId>
 
 	<name>lttoolbox-java</name>
-	<version>3.4.0</version>
+	<version>3.4.1</version>
 	<description>lttoolbox-java is able to process and generate the binary files used by lttoolbox and produce exactly the same output.</description>
 	<url>https://wiki.apertium.org/wiki/Lttoolbox-java</url>
 
 	<organization>
 		<name>The Apertium Project</name>
-		<url>http://apertium.org</url>
+		<url>https://apertium.org</url>
 	</organization>
 
 	<issueManagement>
-		<system>Apertium Bug Tracker</system>
-		<url>https://wiki.apertium.org/wiki/Bugzilla</url>
+		<system>Apertium Github Issues</system>
+		<url>https://github.com/apertium/lttoolbox-java/issues</url>
 	</issueManagement>
 
 	<developers>
@@ -52,8 +52,15 @@
 	<build>
 		<directory>target</directory>
 		<outputDirectory>target/classes</outputDirectory>
-		<finalName>${project.artifactId}-${project.version}</finalName>
+		<finalName>lttoolbox</finalName>
 		<testOutputDirectory>target/test-classes</testOutputDirectory>
+		<!--
+		<directory>target</directory>
+		<finalName>${project.artifactId}-${project.version}</finalName>
+		<outputDirectory>target/classes</outputDirectory>
+		<finalName>../dist/lttoolbox</finalName>
+        -->
+
 		<sourceDirectory>src</sourceDirectory>
 		<testSourceDirectory>test</testSourceDirectory>
 
@@ -73,27 +80,34 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
 				<configuration>
 					<source>8</source>
 					<target>8</target>
 					<encoding>${project.build.sourceEncoding}</encoding>
 				</configuration>
 			</plugin>
+			<!--
 			<plugin>
 				<artifactId>maven-resources-plugin</artifactId>
 				<configuration>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
+			-->
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>2.2</version>
 				<configuration>
+					<excludes>
+						<exclude>**/*.java</exclude>
+						<exclude>**/*.form</exclude>
+					</excludes>
 					<archive>
 						<manifest>
-							<mainClass>org.apertium.lttoolbox.LTToolbox</mainClass>
+							<mainClass>org.apertium.CommandLineInterface</mainClass>
 							<packageName>org.apertium.lttoolbox</packageName>
 						</manifest>
 						<manifestEntries>
@@ -107,58 +121,26 @@
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-eclipse-plugin</artifactId>
-				<version>2.8</version>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.2.4</version>
+				<configuration>
+					<createDependencyReducedPom>false</createDependencyReducedPom>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 
 		</plugins>
 	</build>
 
-<!--
-	<profiles>
-		<profile>
-			<id>default-tools.jar</id>
-			<activation>
-				<property>
-					<name>java.vendor</name>
-					<value>Sun Microsystems Inc.</value>
-				</property>
-			</activation>
-			<dependencies>
-				<dependency>
-					<groupId>com.sun</groupId>
-					<artifactId>tools</artifactId>
-					<version>1.6.0</version>
-					<scope>system</scope>
-					<systemPath>${java.home}/../lib/tools.jar</systemPath>
-				</dependency>
-			</dependencies>
-		</profile>
-	</profiles>
--->
 
 	<dependencies>
-		<!--
-		<dependency>
-			<groupId>trove4j</groupId>
-			<artifactId>trove4j</artifactId>
-			<version>3.0.0a3</version>
-			<scope>system</scope>
-			<systemPath>${basedir}/lib/trove-3.0.0a3.jar</systemPath>
-		</dependency>
-
-		<dependency>
-			<groupId>pcj</groupId>
-			<artifactId>pcj</artifactId>
-			<version>1.2</version>
-		</dependency>
-
-		<dependency>
-			<groupId>commons-primitives</groupId>
-			<artifactId>commons-primitives</artifactId>
-			<version>1.0</version>
-		</dependency>
--->
 
 		<dependency>
 			<groupId>junit</groupId>
